fix: wrong icon vertical align

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -69,8 +69,7 @@ body {
 
 .anita-icon-img {
   width: 1.5em;
-  vertical-align: middle;
-  margin-right: 0.1em;
+  vertical-align: middle !important;
 }
 
 .bg-quality-n {
